<resources>
    <string name="app_name">Doist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="orientation">Orientation</string>
    <string name="description1">Type your note here</string>
    <string name="bullet">bullet</string>
    <string name="delete_image">Delete Image</string>
    <string name="add_a_todo">Add a ToDo</string>
    <string name="noteimage">NoteImage</string>
    <string name="delete_url">delete_url</string>
    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="play_pause_audio">Play/Pause Audio</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="play_audio">Play Audio</string>
    <string name="alarm">Alarm</string>
    <string name="task">Task</string>
    <string name="empty">empty</string>
    <string name="such_empty">Such Empty!</string>
    <string name="brush_style">Brush Style</string>
</resources>