<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"

    tools:context=".fragments.record.RecordAudioFragment">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/primaryDarkColor"
        app:title="Record Audio"
        android:fitsSystemWindows="true"
        app:titleTextColor="@color/white"/>

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="48sp"
        android:layout_margin="20dp"
        android:id="@+id/timer"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/timer"
        android:id="@+id/linear1"
        android:gravity="center"
        android:layout_margin="20dp">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_mic_24"
            android:tint="@color/secondaryTextColor"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/recordButton"
            android:contentDescription="@string/start_recording" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:tint="@color/secondaryTextColor"
            android:src="@drawable/ic_stop"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/stopButton"
            android:contentDescription="@string/stop_recording" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/mediaPlayer"
        android:layout_centerVertical="true"
        tools:visibility="visible"
        android:background="@drawable/media_player_background"
        android:layout_margin="10dp"
        android:padding="15dp">
        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:text="0 secs"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_pass"
            android:textAlignment="viewEnd"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="10dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_below="@id/tv_pass"
            android:thumbTint="@color/secondaryColor"
            android:progressTint="@color/secondaryColor"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/seek_bar"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar"
            android:background="@android:color/transparent"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play"
                android:id="@+id/playButton"
                android:contentDescription="@string/play_audio"
                app:fabSize="mini"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stopBtn"
                android:src="@drawable/ic_stop"
                app:fabSize="mini"
                android:contentDescription="@string/stop_audio" />
        </LinearLayout>
    </RelativeLayout>

    
</RelativeLayout>
</layout>