<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackground"
        tools:context=".fragments.note.AddFragment">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:title="Add a Note"
            app:titleTextColor="?attr/colorControlNormal"
            android:background="@color/primaryColor"
            android:fitsSystemWindows="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                tools:ignore="UselessParent">
                <EditText
                    android:id="@+id/title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"
                    android:paddingVertical="10dp"
                    android:hint="@string/title"
                    android:inputType="textPersonName"
                    android:textColor="@color/titleTextColor"
                    android:textStyle="bold"
                    android:importantForAutofill="no" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_below="@id/title_et"
                    android:id="@+id/timeLayout"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="italic"
                    android:id="@+id/time_text"
                    tools:text="27th Dec 2020"
                    android:getCurrentTime="@{true}"
                   />
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="8dp"
                        android:layout_marginStart="5dp"
                        android:visibility="gone"
                        android:id="@+id/reminderLayout"
                        android:background="@drawable/media_player_background"
                        android:backgroundTint="@color/lightGray">
                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/noteimage"
                            android:src="@drawable/ic_baseline_access_alarm_24"
                            android:layout_alignParentStart="true"
                            android:id="@+id/alarm"
                            android:clickable="false"
                            app:tint="@color/darkGray" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:clickable="false"
                            android:id="@+id/reminderText"
                            android:layout_marginStart="6dp"
                            android:layout_toEndOf="@id/alarm"
                            android:textColor="@color/darkGray"
                            android:layout_centerInParent="true"
                            tools:text="20 Mar,1800"/>
                    </RelativeLayout>

                </LinearLayout>
                <org.angmarch.views.NiceSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundSelector="@drawable/background_selector"
                    android:background="@color/primaryBackground"
                    app:arrowTint="@color/primaryTextColor"
                    android:textColor="@color/primaryTextColor"
                    android:setList="@{true}"
                    android:id="@+id/priorities_spinner"
                    android:layout_below="@id/timeLayout" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image"
                    android:padding="0dp"
                    tools:visibility="visible"
                    tools:layout_width="match_parent"
                    tools:layout_height="100dp"
                    tools:background="@color/primaryDarkColor"
                    android:adjustViewBounds="true"
                    android:layout_below="@id/priorities_spinner"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/noteimage" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:visibility="gone"
                    android:layout_below="@id/priorities_spinner"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:id="@+id/deleteImage"
                    android:elevation="10dp"
                    android:contentDescription="@string/delete_image" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/canvas_image"
                    android:padding="0dp"
                    tools:visibility="visible"
                    tools:layout_width="match_parent"
                    tools:layout_height="100dp"
                    tools:background="@color/primaryDarkColor"
                    android:adjustViewBounds="true"
                    android:layout_below="@id/image"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/noteimage" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:visibility="gone"
                    android:layout_below="@id/image"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:id="@+id/deleteCanvas"
                    android:elevation="10dp"
                    android:contentDescription="@string/delete_image" />
                <RelativeLayout
                    android:id="@+id/url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_below="@id/canvas_image">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18sp"
                    android:id="@+id/url_text"
                    android:autoLink="web"
                    android:textStyle="italic"
                    android:layout_toStartOf="@id/deleteUrl"
                    android:drawablePadding="10dp"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_url"
                    app:drawableTint="@color/secondaryDarkColor"
                    android:importantForAutofill="no" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:id="@+id/deleteUrl"
                    android:contentDescription="@string/delete_url" />
                </RelativeLayout>
              <include layout="@layout/media_player"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/mediaPlayer"
                  android:layout_marginTop="8dp"
                  android:visibility="gone"
                  android:layout_below="@id/url"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/mediaPlayer">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/priority_indicator"
                        android:layout_width="6dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="@color/high"
                        />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"
                    android:hint="@string/description1"
                    android:inputType="textMultiLine"
                    android:paddingStart="10dp"
                    android:id="@+id/description_et"
                    android:paddingVertical="15dp"
                    android:importantForAutofill="no"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>




            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</layout>